# Falling-Sand-Simulation

./: .gitignore  CMakeLists.txt  README.md  grid.h  main.c
include/: sand.h
src/: grid.c  main.c  sand.c
